# CRAG-medical-chatbot

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
faiss_index/: index.faiss  index.pkl
src/: graph.py  helper.py  llm.py  models.py  nodes.py  prompt.py  retriever.py  state.py
static/: landing.css  style.css
templates/: index.html  landing.html
