[project]
name = "rag-medical-chatbot"
version = "0.1.0"
description = "RAG-based Medical Chatbot using FAISS, Ollama, and LangChain"
authors = [
    { name = "Adesh Gawai", email = "adesh@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "faiss-cpu>=1.8.0",
    # LangChain — pinned to stable compatible set
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-experimental>=0.3.0,<0.4.0",
    "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-pinecone>=0.2.0",
    # Embeddings & ML — pinned to avoid regex/transformers conflict
    "fastembed>=0.3.0",
    "sentence-transformers>=3.0.0",
    # Pinecone
    "pinecone[grpc]>=5.0.0",
    "langchain-groq>=0.3.8",
    "peft>=0.19.1",
    "sentencepiece>=0.2.1",
    "protobuf>=5.29.6",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.27.0",
    "transformers==4.46.3",
    "txtai>=9.2.0",
    "flashrank>=0.2.10",
    "langgraph>=1.0.1",
    "tavily-python>=0.7.24",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "psycopg2-binary>=2.9.12",
    "git-filter-repo>=2.47.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "notebook",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "ipykernel",
    "notebook",
]

